Mon Apr 24 21:23:24 UTC 2006 / Niels Baggesen <nba@users.sourceforge.net>

 - CREDITS: Add some credit

Mon Apr 24 20:54:18 UTC 2006 / Niels Baggesen <nba@users.sourceforge.net>

 - docs/new-names.txt clients/upsimage.c clients/upsstats.c conf/upsstats.html conf/upsstats-single.html: Support for measuring phase-neutral voltages

Mon Apr 24 20:45:37 UTC 2006 / Niels Baggesen <nba@users.sourceforge.net>

 - drivers/cpsups.c: Fix C++ style declarations between statements

Mon Apr 24 20:44:51 UTC 2006 / Niels Baggesen <nba@users.sourceforge.net>

 - man/upscode2.8: Fix speling in man page

Mon Apr 24 20:43:43 UTC 2006 / Niels Baggesen <nba@users.sourceforge.net>

 - include/common.h: Declare 'noreturn' to quite compiler warnings

Mon Apr 24 03:18:33 UTC 2006 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - megatec.c: two decimals in "battery.voltage", the protocol allows for it

Sat Apr 22 22:52:44 UTC 2006 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - megatec.c: fixed stupid bug on UPS voltage detection

Sat Apr 22 17:35:23 UTC 2006 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - megatec.c: support 96V UPS

Sun Apr 16 23:24:25 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - renamed fatal(), upslog(), and upsdebug() as fatal_with_errno(), 
   upslog_with_errno(), and upsdebug_with_errno(). 

Mon Apr 16 21:03:20 UTC 2006 / Kjell Claesson <kjell.claesson@telia.com>

 - nut_usb.c: Remove iManufacturer and iProduct test in usb_dev_handle.

Sun Apr 16 19:06:14 UTC 2006 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - megatec.c: minor changes to the debugging output
 - common.c: gcc doesn't issue warnings anymore
 - driver.list: one more model (Sweex) supported by megatec

Sat Apr 08 21:25:32 UTC 2006 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - megatec.c: added some extra debugging.
 - driver.list: added a couple of models supported by megatec

Wed Apr 05 13:17:51 UTC 2006 / Arjen de Korte <arjen@de-korte.org>
